--- a/src/app/features/admin/manage-country/manage-country.component.html
+++ b/src/app/features/admin/manage-country/manage-country.component.html
@@ -3,7 +3,7 @@
         <div class="container-fluid px-4">
             <h1 class="mt-4">Quốc gia</h1>
             <div class="mb-3 d-flex flex-row-reverse">
-                <button type="button" class="btn btn-success" (click)="handleAddAction()">Thêm quốc gia</button>
+                <button type="button" class="btn btn-dark" (click)="handleAddAction()">Thêm quốc gia</button>
             </div>
             <div class="card mb-4">
 
@@ -21,9 +21,7 @@
                                 <tr>
                                     <td>{{ nation.Nat_ID }}</td>
                                     <td>{{ nation.Nat_Name }}</td>
-                                    <td>
-                                        {{ nation.Nat_Status }} 
-                                    </td>
+                                    <td><p-tag [value]="nation.Nat_Status ? 'Hoạt động' : 'Ngừng bán' " [severity]="getSeverity(nation.Nat_Status)"/></td>
                                 </tr>
                             </ng-template>
                         </p-table>
