--- a/src/app/features/admin/manage-user/manage-user.component.html
+++ b/src/app/features/admin/manage-user/manage-user.component.html
@@ -3,7 +3,7 @@
         <div class="container-fluid px-4">
             <h1 class="mt-4">Tài khoản</h1>
             <div class="mb-3 d-flex flex-row-reverse">
-                <button type="button" class="btn btn-success" (click)="handleAddAction()">Thêm tài khoản</button>
+                <button type="button" class="btn btn-dark" (click)="handleAddAction()">Thêm tài khoản</button>
             </div>
             <div class="card mb-4">
                 
