--- a/src/app/features/admin/manage-brand/manage-brand.component.html
+++ b/src/app/features/admin/manage-brand/manage-brand.component.html
@@ -3,31 +3,73 @@
         <div class="container-fluid px-4">
             <h1 class="mt-4">Thương hiệu</h1>
             <div class="mb-3 d-flex flex-row-reverse">
-                <button type="button" class="btn btn-success" (click)="handleAddAction()">
+                <button type="button" class="btn btn-dark" (click)="handleAddAction()">
                     Thêm thương hiệu
                 </button>
             </div>
             <div class="card mb-4">
+                <p-toast></p-toast>
                 <div class="card-body">
                     <div class="card-body">
-                        <p-table [value]="brands" [paginator]="true" [rows]="10" [responsiveLayout]="'scroll'">
+                        <p-table editMode="row" [value]="brands" dataKey="Bra_ID" [paginator]="true" [rows]="10"
+                            [responsiveLayout]="'scroll'">
                             <ng-template pTemplate="header">
                                 <tr>
-                                    <th>ID</th>
-                                    <th>Tên Thương Hiệu</th>
-                                    <th>Trạng Thái</th>
+                                    <th style="width:10%">ID</th>
+                                    <th style="width:70%">Tên Thương Hiệu</th>
+                                    <th style="width:10%">Trạng Thái</th>
+                                    <th style="width:10%"></th>
                                 </tr>
                             </ng-template>
-                            <ng-template pTemplate="body" let-brand>
-                                <tr>
-                                    <td>{{ brand.Bra_ID }}</td>
-                                    <td>{{ brand.Bra_Name }}</td>
-                                    <td>{{ brand.Bra_Status }}</td>
+                            <ng-template pTemplate="body" let-brand let-editing="editing" let-ri="rowIndex">
+                                <tr [pEditableRow]="brand">
+                                    <td>
+                                        {{ brand.Bra_ID }}
+                                    </td>
+                                    <td>
+                                        <p-cellEditor>
+                                            <ng-template pTemplate="input">
+                                                <input pInputText type="text" [(ngModel)]="brand.Bra_Name" />
+                                            </ng-template>
+                                            <ng-template pTemplate="output">
+                                                {{ brand.Bra_Name }}
+                                            </ng-template>
+                                        </p-cellEditor>
+                                    </td>
+                                    <td>
+                                        <p-cellEditor>
+                                            <ng-template pTemplate="input">
+                                                <p-dropdown [options]="statuses" appendTo="body"
+                                                    [(ngModel)]="brand.Bra_Status" />
+                                            </ng-template>
+                                            <ng-template pTemplate="output">
+                                                <p-tag [value]="brand.Bra_Status ? 'Hoạt động' : 'Ngừng bán' "
+                                                    [severity]="getSeverity(brand.Bra_Status)" />
+                                            </ng-template>
+                                        </p-cellEditor>
+                                        <!-- <p-tag [value]="brand.Bra_Status ? 'Hoạt động' : 'Ngừng bán' " [severity]="getSeverity(brand.Bra_Status)"/> -->
+                                    </td>
+                                    <td>
+                                        <div class="flex align-items-center justify-content-center gap-2">
+                                            <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow
+                                                icon="pi pi-pencil" (click)="onRowEditInit(brand)"
+                                                class="p-button-rounded p-button-text">
+                                            </button>
+                                            <button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow
+                                                icon="pi pi-check" (click)="onRowEditSave(brand, ri)"
+                                                class="p-button-rounded p-button-text p-button-success mr-2">
+                                            </button>
+                                            <button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow
+                                                icon="pi pi-times" (click)="onRowEditCancel(brand, ri)"
+                                                class="p-button-rounded p-button-text p-button-danger">
+                                            </button>
+                                        </div>
+                                    </td>
                                 </tr>
                             </ng-template>
                         </p-table>
                     </div>
-                    
+
                 </div>
             </div>
         </div>
