--- a/src/app/features/admin/manage-category/manage-category.component.html
+++ b/src/app/features/admin/manage-category/manage-category.component.html
@@ -3,28 +3,80 @@
         <div class="container-fluid px-4">
             <h1 class="mt-4">Danh mục</h1>
             <div class="mb-3 d-flex flex-row-reverse">
-                <button type="button" class="btn btn-success" (click)="handleAddAction()">
+                <button type="button" class="btn btn-dark" (click)="handleAddAction()">
                     Thêm danh mục
                 </button>
             </div>
             <div class="card mb-4">
+                <p-toast></p-toast>
                 <div class="card-body">
                     <div class="card-body">
-                        <p-table [value]="categories" [paginator]="true" [rows]="10" [responsiveLayout]="'scroll'">
+                        <p-table editMode="row" [value]="categories" [paginator]="true" [rows]="10" [responsiveLayout]="'scroll'">
                             <ng-template pTemplate="header">
                                 <tr>
                                     <th>ID</th>
                                     <th>Tên Danh Mục</th>
                                     <th>Mô Tả</th>
                                     <th>Trạng Thái</th>
+                                    <th></th>
                                 </tr>
                             </ng-template>
-                            <ng-template pTemplate="body" let-category>
-                                <tr>
+                            <ng-template pTemplate="body" let-category let-editing="editing" let-ri="rowIndex">
+                                <tr [pEditableRow]="category">
                                     <td>{{ category.Cat_ID }}</td>
-                                    <td>{{ category.Cat_Name }}</td>
-                                    <td>{{ category.Cat_Desc }}</td>
-                                    <td>{{ category.Cat_Status }}</td>
+                                    <td>
+                                        <p-cellEditor>
+                                            <ng-template pTemplate="input">
+                                                <input 
+                                                    pInputText type="text" 
+                                                    [(ngModel)]="category.Cat_Name" />
+                                            </ng-template>
+                                            <ng-template pTemplate="output">
+                                                {{ category.Cat_Name }}
+                                            </ng-template>
+                                        </p-cellEditor>
+                                    </td>
+                                    <td>
+                                        <p-cellEditor>
+                                            <ng-template pTemplate="input">
+                                                <input 
+                                                    pInputText type="text" 
+                                                    [(ngModel)]="category.Cat_Desc" />
+                                            </ng-template>
+                                            <ng-template pTemplate="output">
+                                                {{ category.Cat_Desc }}
+                                            </ng-template>
+                                        </p-cellEditor>
+                                    </td>
+                                    <td>
+                                        <p-cellEditor>
+                                            <ng-template pTemplate="input">
+                                                <p-dropdown [options]="statuses" appendTo="body"
+                                                    [(ngModel)]="category.Cat_Status" />
+                                            </ng-template>
+                                            <ng-template pTemplate="output">
+                                                <p-tag [value]="category.Cat_Status ? 'Hoạt động' : 'Ngừng bán' "
+                                                    [severity]="getSeverity(category.Cat_Status)" />
+                                            </ng-template>
+                                        </p-cellEditor>
+                                        <!-- <p-tag [value]="category.Cat_Status ? 'Hoạt động' : 'Ngừng bán' " [severity]="getSeverity(category.Cat_Status)"/> -->
+                                    </td>
+                                    <td>
+                                        <div class="flex align-items-center justify-content-center gap-2">
+                                            <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow
+                                                icon="pi pi-pencil" (click)="onRowEditInit(category)"
+                                                class="p-button-rounded p-button-text">
+                                            </button>
+                                            <button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow
+                                                icon="pi pi-check" (click)="onRowEditSave(category, ri)"
+                                                class="p-button-rounded p-button-text p-button-success mr-2">
+                                            </button>
+                                            <button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow
+                                                icon="pi pi-times" (click)="onRowEditCancel(category, ri)"
+                                                class="p-button-rounded p-button-text p-button-danger">
+                                            </button>
+                                        </div>
+                                    </td>
                                 </tr>
                             </ng-template>
                         </p-table>
