--- a/src/app/features/admin/manage-color/manage-color.component.html
+++ b/src/app/features/admin/manage-color/manage-color.component.html
@@ -3,32 +3,68 @@
         <div class="container-fluid px-4">
             <h1 class="mt-4">Màu sắc</h1>
             <div class="mb-3 d-flex flex-row-reverse">
-                <button type="button" class="btn btn-success" (click)="handleAddAction()">Thêm màu sắc</button>
+                <button type="button" class="btn btn-dark" (click)="handleAddAction()">Thêm màu sắc</button>
             </div>
             <div class="card mb-4">
-
+                <p-toast></p-toast>
                 <div class="card-body">
                     <div class="card-body">
-                        <p-table [value]="colors" [paginator]="true" [rows]="10" [responsiveLayout]="'scroll'">
+                        <p-table editMode="row" dataKey="Col_ID" [value]="colors" [paginator]="true" [rows]="10" [responsiveLayout]="'scroll'">
                             <ng-template pTemplate="header">
                                 <tr>
                                     <th>ID</th>
                                     <th>Tên Màu</th>
                                     <th>Trạng Thái</th>
+                                    <th></th>
                                 </tr>
                             </ng-template>
-                            <ng-template pTemplate="body" let-color>
-                                <tr>
+                            <ng-template pTemplate="body" let-color let-editing="editing" let-ri="rowIndex">
+                                <tr [pEditableRow]="color">
                                     <td>{{ color.Col_ID }}</td>
-                                    <td>{{ color.Col_Name }}</td>
                                     <td>
-                                        {{ color.Col_Status }} 
+                                        <p-cellEditor>
+                                            <ng-template pTemplate="input">
+                                                <input 
+                                                    pInputText type="text" 
+                                                    [(ngModel)]="color.Col_Name" />
+                                            </ng-template>
+                                            <ng-template pTemplate="output">
+                                                {{ color.Col_Name }}
+                                            </ng-template>
+                                        </p-cellEditor>
+                                    </td>
+                                    <td>
+                                        <p-cellEditor>
+                                            <ng-template pTemplate="input">
+                                                <p-dropdown [options]="statuses" appendTo="body"
+                                                    [(ngModel)]="color.Col_Status" />
+                                            </ng-template>
+                                            <ng-template pTemplate="output">
+                                                <p-tag [value]="color.Col_Status ? 'Hoạt động' : 'Ngừng bán' "
+                                                    [severity]="getSeverity(color.Col_Status)" />
+                                            </ng-template>
+                                        </p-cellEditor>
+                                    </td>
+                                    <td>
+                                        <div class="flex align-items-center justify-content-center gap-2">
+                                            <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow
+                                                icon="pi pi-pencil" (click)="onRowEditInit(color)"
+                                                class="p-button-rounded p-button-text">
+                                            </button>
+                                            <button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow
+                                                icon="pi pi-check" (click)="onRowEditSave(color, ri)"
+                                                class="p-button-rounded p-button-text p-button-success mr-2">
+                                            </button>
+                                            <button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow
+                                                icon="pi pi-times" (click)="onRowEditCancel(color, ri)"
+                                                class="p-button-rounded p-button-text p-button-danger">
+                                            </button>
+                                        </div>
                                     </td>
                                 </tr>
                             </ng-template>
                         </p-table>
                     </div>
-                    
                 </div>
             </div>
         </div>
