--- a/src/app/features/admin/manage-goods-receipt/manage-goods-receipt.component.html
+++ b/src/app/features/admin/manage-goods-receipt/manage-goods-receipt.component.html
@@ -31,7 +31,7 @@
                     <option value="">-- Tất cả --</option>
                 </select>
     
-                <button type="submit" name="submit" class="btn btn-primary">Lọc</button>
+                <button type="submit" name="submit" class="btn btn-dark">Lọc</button>
             </div>
             <div class="card mb-4">
                 
