--- a/src/app/features/admin/manage-supplier/manage-supplier.component.html
+++ b/src/app/features/admin/manage-supplier/manage-supplier.component.html
@@ -3,7 +3,7 @@
         <div class="container-fluid px-4">
             <h1 class="mt-4">Nhà cung cấp</h1>
             <div class="mb-3 d-flex flex-row-reverse">
-                <button type="button" class="btn btn-success" (click)="handleAddAction()">Thêm nhà cung cấp</button>
+                <button type="button" class="btn btn-dark" (click)="handleAddAction()">Thêm nhà cung cấp</button>
             </div>
             <div class="card mb-4">
 
@@ -24,9 +24,7 @@
                                 <td>{{ supplier.SupplierName }}</td>
                                 <td>{{ supplier.Address }}</td>
                                 <td>{{ supplier.PhoneNumber }}</td>
-                                <td>
-                                    {{ supplier.Status }}
-                                </td>
+                                <td><p-tag [value]="supplier.Status ? 'Hoạt động' : 'Ngừng bán' " [severity]="getSeverity(supplier.Status)"/></td>
                             </tr>
                         </ng-template>
                     </p-table>
