--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,54 @@
-<p>Header</p>
+<div class="container-fluid bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+        <div class="container">
+            <div style="margin-right:  30px !important;">
+                <img width="100%" src="../../../../assets/images/logo/logo.png" alt="Logo" />
+            </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="mynavbar">
+                <div class="d-flex justify-content-between ms-auto nav-hidden">
+                    <form class="d-flex me-4 search-area">
+                        <input class="form-control me-2 input-search" type="text" placeholder="Tên sản phẩm">
+                        <button class="btn btn-primary px-3" type="button" style="background-color: #184AFA; border: none;">
+                            <i class="fa-solid fa-magnifying-glass" style="font-size: 18px;"></i>
+                        </button>
+                    </form>
+                    <ul class="navbar-nav navbar-menu-header">
+                        <li class="nav-item">
+                            <a class="nav-link" href="javascript:void(0)" style="color: #fff;">Sản phẩm</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="javascript:void(0)" style="color: #fff;">Khuyến mãi</a>
+                        </li>
+                        <li class="nav-item">
+                            <div class="dropdown">
+                                <button type="button" class="btn btn-dark dropdown-toggle custom-dropdown-toggle" data-bs-toggle="dropdown">
+                                  Danh mục
+                                </button>
+                                <ul class="dropdown-menu">
+                                  <li><a class="dropdown-item" href="#">Áo thun</a></li>
+                                  <li><a class="dropdown-item" href="#">Áo polo</a></li>
+                                  <li><a class="dropdown-item" href="#">Quần jeans</a></li>
+                                  <li><a class="dropdown-item" href="#">Áo sơ mi</a></li>
+                                </ul>
+                              </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="javascript:void(0)" style="color: #fff;">
+                                <i class="fa-solid fa-cart-shopping"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="javascript:void(0)" style="color: #fff;">
+                                <i class="fa-solid fa-user me-1"></i>
+                                Đăng nhập/Đăng ký
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+</div>
