--- a/src/app/features/personal_information/address-book/address-book.component.css
+++ b/src/app/features/personal_information/address-book/address-book.component.css
@@ -1,7 +1,3 @@
-.header {
-    height: 50px;
-}
-
 .record-container {
     border: none;
     border-radius: 16px;
@@ -146,5 +142,6 @@
 @media (min-width: 993px) {
     .personal-info-container {
         width: 80%;
+        margin-top: 36px !important;
     }
 }
