--- a/src/app/features/personal_information/change-password/change-password.component.html
+++ b/src/app/features/personal_information/change-password/change-password.component.html
@@ -1,5 +1,5 @@
-<div class="header bg-dark"></div>
-<div class="row personal-info-container mt-5 mb-5 mx-auto">
+<app-header />
+<div class="row personal-info-container mt-3 mb-5 mx-auto">
     <div class="col-lg-3 d-none d-lg-block">
         <app-sidebar-personal-info/>
     </div>
