--- a/src/app/features/personal_information/record/record.component.html
+++ b/src/app/features/personal_information/record/record.component.html
@@ -1,5 +1,5 @@
-<div class="header bg-dark"></div>
-<div class="row personal-info-container mt-5 mb-5 mx-auto">
+<app-header />
+<div class="row personal-info-container mt-3 mb-5 mx-auto">
     <div class="col-lg-3 d-none d-lg-block">
         <app-sidebar-personal-info/>
     </div>
@@ -20,7 +20,7 @@
     <div class="col-lg-9">
         <div class="record-container p-4">
             <p class="record-title fw-bold record-title mb-1">Hồ sơ của tôi</p>
-            <p class="record-sec-title record-notice mb-4">Quản lý thông tin hồ sơ để bảo mật tài khoản</p>
+            <p class="record-sec-title record-notice mb-3">Quản lý thông tin hồ sơ để bảo mật tài khoản</p>
             <div class="divided-section-top mx-auto"></div>
             <div class="row mt-4">
                 <div class="col-md-7 col-infor">
