--- a/src/app/features/shop/item-shop/item-shop.component.html
+++ b/src/app/features/shop/item-shop/item-shop.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-4 mb-4" *ngFor="let item of pagedItems">
+<div class="col-md-4 col-lg-3 mb-4" *ngFor="let item of pagedItems">
     <!-- Nếu item không phải là placeholder -->
     <div *ngIf="!item.isPlaceholder" class="card custom-css-item" style="border-radius: 15px;">
       <div class="bg-image hover-overlay ripple ripple-surface ripple-surface-light" data-mdb-ripple-color="light">
