--- a/src/app/features/shop/item-shop/item-shop.component.html
+++ b/src/app/features/shop/item-shop/item-shop.component.html
@@ -1,3 +1,4 @@
+<p-toast />
 <div class="col-md-4 mb-4" *ngFor="let item of pagedItems">
     <!-- Nếu item không phải là placeholder -->
     <div *ngIf="!item.isPlaceholder" class="card custom-css-item" style="border-radius: 15px;">
@@ -24,7 +25,7 @@
       </div>
       <div class="card-body">
         <div class="d-flex justify-content-between align-items-center pb-2 mb-1">
-          <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-add-to-cart">
+          <button (click)="handleCartBtnClicked(item)" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-add-to-cart">
             <img src="../../../../assets/images/icons8-add-shopping-cart-32.png" alt="" >
           </button>
           <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark">Mua ngay</button>
