--- a/src/app/features/home/home/home.component.css
+++ b/src/app/features/home/home/home.component.css
@@ -184,7 +184,7 @@
   /* Categories Styles */
   .categories {
     padding: 40px 0;
-    background-color: #f2f2f2;
+    /*background-color: #f2f2f2;*/
   }
   
   .categories h2 {
