--- a/src/app/features/shop/item-shop/item-shop.component.html
+++ b/src/app/features/shop/item-shop/item-shop.component.html
@@ -1,38 +1,33 @@
-<<<<<<< HEAD
 <p-toast />
-<div class="col-md-4 mb-4" *ngFor="let item of pagedItems">
-=======
-<div class="col-md-4 col-lg-3 mb-4" *ngFor="let item of pagedItems">
->>>>>>> bd30845a65087ec6a1f6172e00e5165031ab4221
+<div class="col-md-4 col-lg-3 mb-4 item-container" *ngFor="let item of pagedItems">
     <!-- Nếu item không phải là placeholder -->
     <div *ngIf="!item.isPlaceholder" class="card custom-css-item" style="border-radius: 15px;">
-      <div class="bg-image hover-overlay ripple ripple-surface ripple-surface-light" data-mdb-ripple-color="light">
-        <div style="display: flex;width: 100%; height: 200px;">
-          <img src="../../../../assets/images/yor-spy-x-family.avif"
-               style="border-top-left-radius: 15px; border-top-right-radius: 15px;width: 100%;object-fit: cover;"
+      <div (click)="navigateToProductDetail(item.id)" class="bg-image hover-overlay ripple ripple-surface ripple-surface-light" data-mdb-ripple-color="light">
+        <div style="text-align: center;">
+          <img src="../../../../assets/images/vn-11134207-7r98o-lxtcujiemg9nbe.webp"
+               style="margin: 10px 0 0; width: 160px;"
                class="img-fluid" alt="Laptop" />
         </div>
       </div>
       <div class="card-body pb-0">
         <div class="d-flex justify-content-between">
           <div>
-            <h5><a (click)="navigateToProductDetail(item.id)" class="text-dark">{{ item.name }}</a></h5>
+            <h5 style="display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 3;line-height: 1.2; height: 52px; overflow: hidden;font-size: 14px;"><a (click)="navigateToProductDetail(item.id)" class="text-dark">{{ item.name }}</a></h5>
           </div>
         </div>
       </div>
-      <hr class="my-0" />
       <div class="card-body pb-0">
-        <div class="d-flex justify-content-between">
-          <p><a href="#!" class="text-dark price-item-custom">{{ item.price - (item.price * item.pricesale / 100) | currency:'VND':'symbol' }}</a></p>
+        <div class="d-flex justify-content-between" style="font-size: 14px;">
+          <p><a class="text-dark price-item-custom">{{ item.price - (item.price * item.pricesale / 100) | currency:'VND':'symbol' }}</a></p>
           <p style="text-decoration: line-through;">{{ item.price | currency:'VND':'symbol'}} <span class="badge bg-danger">{{- item.pricesale }}%</span></p>
         </div>
       </div>
       <div class="card-body">
         <div class="d-flex justify-content-between align-items-center pb-2 mb-1">
           <button (click)="handleCartBtnClicked(item)" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-add-to-cart">
-            <img src="../../../../assets/images/icons8-add-shopping-cart-32.png" alt="" >
+            <img src="../../../../assets/images/icons8-add-shopping-cart-32.png" alt="" width="24px">
           </button>
-          <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark">Mua ngay</button>
+          <button style="font-size: 14px;" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark">Mua ngay</button>
         </div>
       </div>
     </div>
@@ -45,7 +40,22 @@
   
 <!-- Phân trang -->
 <div class="pagination-controls">
-    <button (click)="previousPage()" [disabled]="currentPage === 1">Trước</button>
-    <span>Trang {{ currentPage }} / {{ totalPages }}</span>
-    <button (click)="nextPage()" [disabled]="currentPage === totalPages">Sau</button>
+  <nav aria-label="Page navigation example">
+    <ul class="pagination">
+      <li class="page-item" [class.disabled]="currentPage === 1">
+        <a class="page-link" (click)="previousPage()" aria-label="Previous">
+          <span aria-hidden="true">&laquo;</span>
+        </a>
+      </li>
+      <li class="page-item" *ngFor="let page of [].constructor(totalPages); let i = index">
+        <a class="page-link" (click)="goToPage(i + 1)" [class.active]="currentPage === (i + 1)">{{ i + 1 }}</a>
+      </li>
+      <li class="page-item" [class.disabled]="currentPage === totalPages">
+        <a class="page-link" (click)="nextPage()" aria-label="Next">
+          <span aria-hidden="true">&raquo;</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+  
 </div>
