--- a/src/app/features/shop/shop/shop.component.html
+++ b/src/app/features/shop/shop/shop.component.html
@@ -1,8 +1,22 @@
 <app-header />
 <div class="container-fluid container-shop-page">
     <div class="row">
-        <div class="col-lg-3">
+        <div class="col-lg-3 d-none d-lg-block">
             <app-sidebar-shop />
+        </div>
+        <div class="d-block d-lg-none">
+            <div class="offcanvas offcanvas-start offfcanvas-option" id="demo">
+                <div class="offcanvas-header">
+                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <app-sidebar-shop />
+                </div> 
+            </div>
+            <!-- Button to open the offcanvas sidebar -->
+            <button class="btn btn-dark btn-option" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
+                Tùy chọn
+            </button>
         </div>
         <div class="col-lg-9">
             <div class="row">
