--- a/src/app/features/shop/special-item-shop/special-item-shop.component.html
+++ b/src/app/features/shop/special-item-shop/special-item-shop.component.html
@@ -1,59 +1,35 @@
-<!-- <div class="specialitem-shop">
-    <div class="img-specialitem">
-        <img src="https://res.cloudinary.com/dt46dvdeu/image/upload/v1702747356/albums/vux.thuy.trangg/h65cfqysy0ollzbzkwnk.jpg" alt="">
-    </div>
-    <div class="info-specialitem">
-        <p class="title-info-specialitem">Light Stick J97 Version 3</p>
-        <p class="mota-info-specialitem">Mô tả: "Fireflies Light" là điều mong chờ của cộng đồng Đom Đóm trong năm 2024. Những người hâm mộ bấy lâu nay của Jack - J97 luôn trông chờ được sở hữu chiếc Light Stick chính thức - vật phẩm cổ động đặc trưng của mỗi một fandom.</p>
-        <div class="color-info-specialitem">
-            <p>Màu sắc: </p>
-            <div style="display: block; width: 20px; height: 20px; border-radius: 8px;background-color: blue;"></div>
-            <div style="display: block; width: 20px;height: 20px;border-radius: 8px;background-color: red;"></div>
-            <div style="display: block; width: 20px;height: 20px;border-radius: 8px;background-color: yellow;"></div>
+<div class="card card-custom">
+    <div class="row no-gutters">
+        <div class="col-md-3 img-container">
+            <img src="../../../../assets/images/yor-spy-x-family.avif" alt="Placeholder Image" height="200">
         </div>
-        <div>
-            <button>Thêm vào giỏ hàng</button>
-            <button>Mua ngay</button>
-        </div>
-    </div>
-</div> -->
-
-<!-- <div class="card w-100 mb-3">
-    <div class="card-body row">
-        <div class="col-4 square-div">
-            <img src="../../../../assets/images/j97.jpg" alt="" class="img-fluid">
-        </div>
-        <div class="col-8 other-div ">
-            <p>Light Stick J97 Version 3</p>
-            <p>Mô tả: "Fireflies Light" là điều mong chờ của cộng đồng Đom Đóm trong năm 2024. Những người hâm mộ bấy lâu nay của Jack - J97 luôn trông chờ được sở hữu chiếc Light Stick chính thức - vật phẩm cổ động đặc trưng của mỗi một fandom.</p>
-        </div>
-    </div>
-  </div> -->
-
-    <div class="card card-custom">
-        <div class="row no-gutters">
-            <div class="col-md-3 img-container">
-                <img src="../../../../assets/images/yor-spy-x-family.avif" alt="Placeholder Image" height="200">
-            </div>
-            <div class="col-md-9 d-flex align-items-center mt-3">
-                <div>
-                    <p>Light Stick J97 Version 3</p>
-                    <p>Mô tả: "Fireflies Light" là điều mong chờ của cộng đồng Đom Đóm trong năm 2024. Những người hâm mộ bấy lâu nay của Jack - J97 luôn trông chờ được sở hữu chiếc Light Stick chính thức - vật phẩm cổ động đặc trưng của mỗi một fandom.</p>
-                    <div class="d-flex">
-                        <p>Màu sắc:</p>
-                        <div class="d-flex ms-3">
-                            <div class="me-3" style="width: 24px; height: 24px; background-color: blue;border-radius: 50%;"></div>
-                            <div class="me-3" style="width: 24px; height: 24px; background-color: yellow;border-radius: 50%;"></div>
-                            <div class="me-3" style="width: 24px; height: 24px; background-color: green;border-radius: 50%;"></div>
+        <div class="col-md-9 d-flex align-items-center mt-3">
+            <div>
+                <p>Light Stick J97 Version 3</p>
+                <p>Mô tả: "Fireflies Light" là điều mong chờ của cộng đồng Đom Đóm trong năm 2024. Những người hâm mộ
+                    bấy lâu nay của Jack - J97 luôn trông chờ được sở hữu chiếc Light Stick chính thức - vật phẩm cổ
+                    động đặc trưng của mỗi một fandom.</p>
+                <div class="d-flex">
+                    <p>Màu sắc:</p>
+                    <div class="d-flex ms-3">
+                        <div class="me-3" style="width: 24px; height: 24px; background-color: blue;border-radius: 50%;">
                         </div>
+                        <div class="me-3"
+                            style="width: 24px; height: 24px; background-color: yellow;border-radius: 50%;"></div>
+                        <div class="me-3"
+                            style="width: 24px; height: 24px; background-color: green;border-radius: 50%;"></div>
                     </div>
-                    <div class="d-flex align-items-center pb-2 mb-1">
-                        <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-add-to-cart">
-                            Thêm vào giỏ hàng
-                        </button>
-                        <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark ms-3">Mua ngay</button>
-                    </div>
+                </div>
+                <div class="d-flex align-items-center pb-2 mb-1">
+                    <button type="button" data-mdb-button-init data-mdb-ripple-init
+                        class="btn btn-dark btn-add-to-cart"
+                        >
+                        Thêm vào giỏ hàng
+                    </button>
+                    <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark ms-3">Mua
+                        ngay</button>
                 </div>
             </div>
         </div>
     </div>
+</div>
