--- a/src/app/features/shop/filter-price/filter-price.component.html
+++ b/src/app/features/shop/filter-price/filter-price.component.html
@@ -1,10 +1,6 @@
 <div class="dropdown d-flex justify-content-end mb-3 mt-2">
-    <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-        Mặc định
-    </button>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <li><a class="dropdown-item" href="#">Mặc định</a></li>
-        <li><a class="dropdown-item" href="#">Giá từ cao đến thấp</a></li>
-        <li><a class="dropdown-item" href="#">Giá từ thấp đến cao</a></li>
-    </ul>
+    <select class="form-select" style="width: 200px;font-size: 15px;" aria-label="Default select example" (change)="onCategoryChange($event)">
+        <option value="all" selected>Tất cả</option>
+        <option *ngFor="let filter of filterprice" [value]="filter.name">{{ filter.name }}</option>
+      </select>
 </div>
