--- a/src/app/features/shop/image-slider/image-slider.component.css
+++ b/src/app/features/shop/image-slider/image-slider.component.css
@@ -10,9 +10,13 @@
     opacity: 1;
 }
 
+#mainImage{
+    text-align: center;
+}
+
 #mainImage img{
-    width: 100%;
-    height: 500px;
+    width: 400px;
+    height: 400px;
     max-height: 600px;
     object-fit: contain;
 }
